Fix sizing issues
Fix button alignment. Fix overlapping.

--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -4,7 +4,7 @@
   flex-direction: column;
 }
 
-.banner--mobile-bottom:not(.banner--stacked):not(.banner--adapt) {
+.banner--mobile-bottom:not(.banner--stacked):not(.banner--adapt) > .banner__media {
   height: 39rem;
 }
 
@@ -57,6 +57,10 @@
   .banner--stacked .banner__media-half + .banner__media-half {
     order: 1;
   }
+
+  .banner:not(.banner--adapt):not(.banner--stacked):not(.banner--mobile-bottom) > .banner__content {
+    min-height: 39rem;
+  }
 }
 
 @media screen and (min-width: 750px) {
@@ -70,17 +74,6 @@
 }
 
 @media screen and (max-width: 749px) {
-  .banner--adapt:not(.banner--mobile-bottom) .banner__content {
-    height: 0;
-    overflow: hidden;
-  }
-
-  .banner--adapt:not(.banner--mobile-bottom) .banner__box {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-
   .banner--mobile-bottom .banner__media,
   .banner--stacked:not(.banner--mobile-bottom) .banner__media {
     position: relative;
@@ -199,7 +192,7 @@
 .banner::after {
   content: '';
   position: absolute;
-  background: black;
+  background: #000000;
   opacity: 0;
   z-index: 1;
   width: 100%;
@@ -207,8 +200,10 @@
 }
 
 .banner__box > * + .banner__buttons {
-  margin: 0 auto;
-  margin-top: 2.3rem;
+  align-items: baseline;
+  gap: 1rem;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .banner__box > * + .banner__buttons--multiple {
@@ -223,15 +218,6 @@
   .banner__box > * + .banner__buttons {
     margin-top: 2rem;
   }
-}
-
-.banner__content .button + .button {
-  margin-top: 1.5rem;
-}
-
-.banner__content .button {
-  height: auto;
-  margin-right: 2rem;
 }
 
 .banner__content .button:last-child {
@@ -256,11 +242,11 @@
   margin-top: 0;
 }
 
-@media screen and (max-width: 749px) {
-  .banner__content .button {
-    flex-grow: 1;
-  }
+.banner__content .button {
+  flex-grow: 1;
+}
 
+@media screen and (max-width: 749px) {
   .banner--stacked .banner__box {
     width: 100%;
   }
